[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Rectangle 4.png" type="Texture" id=2]
[ext_resource path="res://scenes/feature.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[node name="feature" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
scale = Vector2( 1.32762, 1.25966 )
texture = ExtResource( 2 )
centered = false

[node name="color" type="ColorRect" parent="bg"]
margin_right = 230.0
margin_bottom = 199.0
color = Color( 0.286275, 0.705882, 0.72549, 0.345098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1.98425
margin_top = 0.396851
margin_right = 43.9843
margin_bottom = 20.3969
text = "NEW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 45.2335
margin_top = 0.0786443
margin_right = 102.233
margin_bottom = 20.0787
text = "COLOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 103.255
margin_top = -0.0804591
margin_right = 160.255
margin_bottom = 19.9196
text = "NOTES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
visible = false
margin_left = 261.52
margin_top = 0.793701
margin_right = 303.52
margin_bottom = 20.7937
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 8.84091
margin_top = 21.8863
margin_right = 298.841
margin_bottom = 65.8863
custom_fonts/font = SubResource( 1 )
text = "Test Kavel"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Label"]
position = Vector2( 0.840912, 23.545 )
points = PoolVector2Array( 5.52339, 22.2543, 285.233, 22.0161 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Button" to="." method="addNewFeature"]
[connection signal="pressed" from="Button2" to="." method="changeColor"]
[connection signal="pressed" from="Button3" to="." method="addDescToFeature"]
[connection signal="pressed" from="exit" to="." method="deleteFeatureBox"]
